--- a/public/styles.css
+++ b/public/styles.css
@@ -12,14 +12,14 @@ body {
 }
 
 header {
-  background-color: #f5ba13;
+  background-color: #4fc500;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
 
 header h1 {
-  color: #fff;
+  color: rgb(0, 0, 0);
   font-family: "McLaren", cursive;
   font-weight: 200;
 }
